# DPInference

./: CMakeLists.txt  main.cpp
models/: fdeep_model.json  model.onnx
src/: CpuInference.cpp  FileUtils.cpp  GpuInference.cpp  ImageUtils.cpp
src/include/: AbstractInference.h  CpuInference.h  FileUtils.h  GpuInference.h  ImageUtils.h  Logger.h  MathUtils.h  Model.h
